fix spacing above map section

--- a/src/blocks/map.css
+++ b/src/blocks/map.css
@@ -14,7 +14,7 @@
 }
 
 .map__header {
-  margin-top: 200px;
+  margin-top: 500px;
   margin-left: 100px;
   font-size: 40px;
   font-family: "Roboto-Medium";
